LU-6903 lov: call lov_object_find_cbdata() inside lock

It should be called inside layout type lock otherwise the layout may
change and hit assertion.

Signed-off-by: Jinshan Xiong <jinshan.xiong@intel.com>
Change-Id: I61d8c2a4f770ee0b05428ac763fc0d0db833f289
Reviewed-on: http://review.whamcloud.com/15748
Tested-by: Jenkins
Reviewed-by: John L. Hammond <john.hammond@intel.com>
Reviewed-by: Henri Doreau <henri.doreau@cea.fr>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>